--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
     <h1>Pendataan Warga</h1>
     <form id="form-warga">
+        <input type="text" id="nik" placeholder="NIK" required>
         <input type="text" id="nama" placeholder="Nama" required>
-        <input type="text" id="alamat" placeholder="Alamat" required>
+        <input type="number" id="umur" placeholder="Umur" required>
+        <input type="text" id="alamat-ktp" placeholder="Alamat KTP" required>
+        <input type="text" id="alamat-domisili" placeholder="Alamat Domisili" required>
         <button type="submit">Tambah</button>
     </form>
     <ul id="daftar-warga"></ul>
